--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "axios": "^0.15.3",
     "cross-env": "^3.2.3",
     "laravel-mix": "0.*",
     "lodash": "^4.17.10",
+    "node-sass": "^4.9.0",
     "vue": "^2.5.16"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.0",
     "bootstrap-vue": "^1.5.1",
@@ -25,8 +26,8 @@
     "hoek": "^5.0.3",
     "jquery": "^3.3.1",
     "jump.js": "^1.0.2",
+    "marked": "^0.3.19",
     "moment": "^2.22.1",
-    "node-sass": "^4.9.0",
     "raven-js": "^3.24.2",
     "vue-focus": "^2.1.0",
     "vue-i18n": "^7.6.0",
